--- a/php/credits.html
+++ b/php/credits.html
@@ -32,6 +32,10 @@
     <td>bugfixes</td>
   </tr>
   <tr>
+    <td align="right">Michael Hanke</td>
+    <td>fixes</td>
+  </tr>
+  <tr>
     <td align="right">Christian Hoenig</td>
     <td>improvements</td>
   </tr>
@@ -73,7 +77,7 @@
   </tr>
   <tr>
     <td align="right">Jan Miczaika</td>
-    <td>importer</td>
+    <td>importer, multiple ratings</td>
   </tr>
   <tr>
     <td align="right">Francisco J. Montilla</td>
