--- a/php/credits.html
+++ b/php/credits.html
@@ -1,106 +1,106 @@
-<table cellpadding="4">
+<table class="main">
   <tr>
-    <td align="right">David Baldwin</td>
-    <td>PHP 4.2 compatibility and fixes</td>
+    <td class="fieldtitle">David Baldwin</td>
+    <td class="field">PHP 4.2 compatibility and fixes</td>
   </tr>
   <tr>
-    <td align="right">Edelhard Becker</td>
-    <td>Debian packages</td>
+    <td class="fieldtitle">Edelhard Becker</td>
+    <td class="field">Debian packages</td>
   </tr>
   <tr>
-    <td align="right">Nixon Childs</td>
-    <td>annotated photos</td>
+    <td class="fieldtitle">Nixon Childs</td>
+    <td class="field">annotated photos</td>
   </tr>
   <tr>
-    <td align="right">Francesco Ciattaglia</td>
-    <td>Italian translation</td>
+    <td class="fieldtitle">Francesco Ciattaglia</td>
+    <td class="field">Italian translation</td>
   </tr>
   <tr>
-    <td align="right">Mark Cooper</td>
-    <td>rpm packages, makefile, man page</td>
+    <td class="fieldtitle">Mark Cooper</td>
+    <td class="field">rpm packages, makefile, man page</td>
   </tr>
   <tr>
-    <td align="right">Alvaro González Crespo</td>
-    <td>Spanish translation</td>
+    <td class="fieldtitle">Alvaro González Crespo</td>
+    <td class="field">Spanish translation</td>
   </tr>
   <tr>
-    <td align="right">Dominique Dumon</td>
-    <td>improvements</td>
+    <td class="fieldtitle">Dominique Dumon</td>
+    <td class="field">improvements</td>
   </tr>
   <tr>
-    <td align="right">Donald Gover</td>
-    <td>bugfixes</td>
+    <td class="fieldtitle">Donald Gover</td>
+    <td class="field">bugfixes</td>
   </tr>
   <tr>
-    <td align="right">Michael Hanke</td>
-    <td>fixes</td>
+    <td class="fieldtitle">Michael Hanke</td>
+    <td class="field">fixes</td>
   </tr>
   <tr>
-    <td align="right">Christian Hoenig</td>
-    <td>improvements</td>
+    <td class="fieldtitle">Christian Hoenig</td>
+    <td class="field">improvements</td>
   </tr>
   <tr>
-    <td align="right">Samuel Keim</td>
-    <td>email notification, last login &amp; ip, improvements</td>
+    <td class="fieldtitle">Samuel Keim</td>
+    <td class="field">email notification, last login &amp; ip, improvements</td>
   </tr>
   <tr>
-    <td align="right">Ian Kerr</td>
-    <td>fixes, Canadian English translation</td>
+    <td class="fieldtitle">Ian Kerr</td>
+    <td class="field">fixes, Canadian English translation</td>
   </tr>
   <tr>
-    <td align="right">David Kulp</td>
-    <td>bugfixes</td>
+    <td class="fieldtitle">David Kulp</td>
+    <td class="field">bugfixes</td>
   </tr>
   <tr>
-    <td align="right">Tetsuji Kyan</td>
-    <td>bugfixes</td>
+    <td class="fieldtitle">Tetsuji Kyan</td>
+    <td class="field">bugfixes</td>
   </tr>
   <tr>
-    <td align="right">Patrick Lam</td>
-    <td>improvements</td>
+    <td class="fieldtitle">Patrick Lam</td>
+    <td class="field">improvements</td>
   </tr>
   <tr>
-    <td align="right">Asheesh Laroia</td>
-    <td>htpasswd authentication, fixes</td>
+    <td class="fieldtitle">Asheesh Laroia</td>
+    <td class="field">htpasswd authentication, fixes</td>
   </tr>
   <tr>
-    <td align="right">Haavard Leonardo Lund</td>
-    <td>Norwegian translation</td>
+    <td class="fieldtitle">Haavard Leonardo Lund</td>
+    <td class="field">Norwegian translation</td>
   </tr>
   <tr>
-    <td align="right">Matthew MacIntyre</td>
-    <td>bugfixes</td>
+    <td class="fieldtitle">Matthew MacIntyre</td>
+    <td class="field">bugfixes</td>
   </tr>
   <tr>
-    <td align="right">Mikael Magnusson</td>
-    <td>Swedish translation</td>
+    <td class="fieldtitle">Mikael Magnusson</td>
+    <td class="field">Swedish translation</td>
   </tr>
   <tr>
-    <td align="right">Jan Miczaika</td>
-    <td>importer, multiple ratings</td>
+    <td class="fieldtitle">Jan Miczaika</td>
+    <td class="field">importer, multiple ratings</td>
   </tr>
   <tr>
-    <td align="right">Francisco J. Montilla</td>
-    <td>bugfixes and improvements</td>
+    <td class="fieldtitle">Francisco J. Montilla</td>
+    <td class="field">bugfixes and improvements</td>
   </tr>
   <tr>
-    <td align="right">David Moulton</td>
-    <td>improvements</td>
+    <td class="fieldtitle">David Moulton</td>
+    <td class="field">improvements</td>
   </tr>
   <tr>
-    <td align="right">Mario Peter</td>
-    <td>German translation</td>
+    <td class="fieldtitle">Mario Peter</td>
+    <td class="field">German translation</td>
   </tr>
   <tr>
-    <td align="right">Eric Seigne</td>
-    <td>internationalization, French translation</td>
+    <td class="fieldtitle">Eric Seigne</td>
+    <td class="field">internationalization, French translation</td>
   </tr>
   <tr>
-    <td align="right">Alan Shutko</td>
-    <td>improvements</td>
+    <td class="fieldtitle">Alan Shutko</td>
+    <td class="field">improvements</td>
   </tr>
   <tr>
-    <td align="right">Arjen Tebbenhof</td>
-    <td>Dutch translation</td>
+    <td class="fieldtitle">Arjen Tebbenhof</td>
+    <td class="field">Dutch translation</td>
   </tr>
 </table>
