--- a/php/credits.html
+++ b/php/credits.html
@@ -103,4 +103,12 @@
     <td class="fieldtitle">Arjen Tebbenhof</td>
     <td class="field">Dutch translation</td>
   </tr>
+  <tr>
+    <td class="fieldtitle">Mat Lee</td>
+    <td class="field">Traditional Chinese translation</td>
+  </tr>
+  <tr>
+    <td class="fieldtitle">Jeroen Roos</td>
+    <td class="field">CSS conversion</td>
+  </tr>
 </table>
