--- a/php/credits.html
+++ b/php/credits.html
@@ -104,6 +104,14 @@
     <td class="field">Dutch translation</td>
   </tr>
   <tr>
+    <td class="fieldtitle">Chris Beauchamp</td>
+    <td class="field">PostgresSQL diff</td>
+  </tr>
+  <tr>
+    <td class="fieldtitle">Nils Decker</td>
+    <td class="field">zophEdit script</td>
+  </tr>
+  <tr>
     <td class="fieldtitle">Mat Lee</td>
     <td class="field">Traditional Chinese translation</td>
   </tr>
