--- a/php/credits.html
+++ b/php/credits.html
@@ -133,6 +133,6 @@
   </tr>
   <tr>
     <td class="fieldtitle">Jeroen Roos</td>
-    <td class="field">CSS conversion</td>
+    <td class="field">CSS conversion and various changes</td>
   </tr>
 </table>
