Updated for 0.4 and sorted alphabetically

--- a/php/credits.html
+++ b/php/credits.html
@@ -16,8 +16,16 @@
 !-->
 <table class="main">
   <tr>
+    <td class="fieldtitle">Joaquim Azevedo</td>
+    <td class="field">Portuguese translation</td>
+  </tr>
+  <tr>
     <td class="fieldtitle">David Baldwin</td>
     <td class="field">PHP 4.2 compatibility and fixes</td>
+  </tr>
+  <tr>
+    <td class="fieldtitle">Chris Beauchamp</td>
+    <td class="field">PostgresSQL diff</td>
   </tr>
   <tr>
     <td class="fieldtitle">Edelhard Becker</td>
@@ -25,7 +33,7 @@
   </tr>
   <tr>
     <td class="fieldtitle">Nixon Childs</td>
-    <td class="field">annotated photos</td>
+    <td class="field">Annotated photos</td>
   </tr>
   <tr>
     <td class="fieldtitle">Francesco Ciattaglia</td>
@@ -33,11 +41,15 @@
   </tr>
   <tr>
     <td class="fieldtitle">Mark Cooper</td>
-    <td class="field">rpm packages, makefile, man page</td>
+    <td class="field">rpm packages, makefile, man page and fixes</td>
   </tr>
   <tr>
     <td class="fieldtitle">Alvaro González Crespo</td>
     <td class="field">Spanish translation</td>
+  </tr>
+  <tr>
+    <td class="fieldtitle">Nils Decker</td>
+    <td class="field">zophEdit script</td>
   </tr>
   <tr>
     <td class="fieldtitle">Dominique Dumon</td>
@@ -56,12 +68,20 @@
     <td class="field">improvements</td>
   </tr>
   <tr>
+    <td class="fieldtitle">Neels Jordaan</td>
+    <td class="field">Afrikaans translation</td>
+  </tr>
+  <tr>
     <td class="fieldtitle">Samuel Keim</td>
-    <td class="field">email notification, last login &amp; ip, improvements</td>
+    <td class="field">email notification, last login &amp; ip, PHP validation, improvements</td>
   </tr>
   <tr>
     <td class="fieldtitle">Ian Kerr</td>
     <td class="field">fixes, Canadian English translation</td>
+  </tr>
+  <tr>
+    <td class="fieldtitle">Krzysztof Kajkowski</td>
+    <td class="field">Polish translation</td>
   </tr>
   <tr>
     <td class="fieldtitle">David Kulp</td>
@@ -73,11 +93,19 @@
   </tr>
   <tr>
     <td class="fieldtitle">Patrick Lam</td>
-    <td class="field">improvements</td>
+    <td class="field">Various improvements</td>
   </tr>
   <tr>
     <td class="fieldtitle">Asheesh Laroia</td>
     <td class="field">htpasswd authentication, fixes</td>
+  </tr>
+  <tr>
+    <td class="fieldtitle">Johan Linder</td>
+    <td class="field">Updated Swedish translation</td>
+  </tr>
+  <tr>
+    <td class="fieldtitle">Mat Lee</td>
+    <td class="field">Traditional Chinese translation</td>
   </tr>
   <tr>
     <td class="fieldtitle">Haavard Leonardo Lund</td>
@@ -100,6 +128,10 @@
     <td class="field">bugfixes and improvements</td>
   </tr>
   <tr>
+    <td class="fieldtitle">Giles Morant</td>
+    <td class="field">Movie import script<td>
+  </tr>
+  <tr>
     <td class="fieldtitle">David Moulton</td>
     <td class="field">improvements</td>
   </tr>
@@ -108,31 +140,39 @@
     <td class="field">German translation</td>
   </tr>
   <tr>
+    <td class="fieldtitle">&quot;Prince01&quot;</td>
+    <td class="field">Hebrew translation</td>
+  </tr>
+  <tr>
+    <td class="fieldtitle">Curtis Rawls</td>
+    <td class="field">Bugfixes</td>
+  </tr>
+  <tr>
+    <td class="fieldtitle">Jeroen Roos</td>
+    <td class="field">CSS conversion and various changes</td>
+  </tr>
+  <tr>
     <td class="fieldtitle">Eric Seigne</td>
     <td class="field">internationalization, French translation</td>
+  </tr>
+  <tr>
+    <td class="fieldtitle">Jesper Skytte</td>
+    <td class="field">Danish Translation</td>
   </tr>
   <tr>
     <td class="fieldtitle">Alan Shutko</td>
     <td class="field">improvements</td>
   </tr>
   <tr>
+    <td class="fieldtitle">Jason Taylor</td>
+    <td class="field">Bugfix</td>
+  </tr>
+  <tr>
     <td class="fieldtitle">Arjen Tebbenhof</td>
     <td class="field">Dutch translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Chris Beauchamp</td>
-    <td class="field">PostgresSQL diff</td>
-  </tr>
-  <tr>
-    <td class="fieldtitle">Nils Decker</td>
-    <td class="field">zophEdit script</td>
-  </tr>
-  <tr>
-    <td class="fieldtitle">Mat Lee</td>
-    <td class="field">Traditional Chinese translation</td>
-  </tr>
-  <tr>
-    <td class="fieldtitle">Jeroen Roos</td>
-    <td class="field">CSS conversion and various changes</td>
+    <td class="fieldtitle">Hans Verbrugge</td>
+    <td class="field">Buxfix</td>
   </tr>
 </table>
