Typo: buxfix ---> bugfix

--- a/php/credits.html
+++ b/php/credits.html
@@ -173,6 +173,6 @@
   </tr>
   <tr>
     <td class="fieldtitle">Hans Verbrugge</td>
-    <td class="field">Buxfix</td>
+    <td class="field">Bugfix</td>
   </tr>
 </table>
