Req #656472: patch by Oliver Seidel to allow a hierarchical structure in 'dateddirs'

--- a/php/credits.html
+++ b/php/credits.html
@@ -152,6 +152,10 @@
     <td class="field">CSS conversion and various changes</td>
   </tr>
   <tr>
+    <td class="fieldtitle">Oliver Seidel</td>
+    <td class="field">Hierarchical directories in zophImport.pl</td>
+  </tr>
+  <tr>
     <td class="fieldtitle">Eric Seigne</td>
     <td class="field">internationalization, French translation</td>
   </tr>
