--- a/php/credits.html
+++ b/php/credits.html
@@ -14,7 +14,7 @@
  * along with Zoph; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 !-->
-<table class="main">
+<table id="credits">
   <tr>
     <td class="fieldtitle">Joaquim Azevedo</td>
     <td class="field">Portuguese translation</td>
