Some changes to the web importer. Including patches from Roy Bonser.

--- a/php/credits.html
+++ b/php/credits.html
@@ -32,8 +32,8 @@
     <td class="field">Debian packages</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Nixon Childs</td>
-    <td class="field">Annotated photos</td>
+    <td class="fieldtitle">Roy Bonser</td>
+    <td class="field">Patches for web import function</td>
   </tr>
   <tr>
     <td class="fieldtitle">Francesco Ciattaglia</td>
