Corrected accidental removal of a name.

--- a/php/credits.html
+++ b/php/credits.html
@@ -36,6 +36,10 @@
     <td class="field">Patches for web import function</td>
   </tr>
   <tr>
+    <td class="fieldtitle">Nixon Childs</td>
+    <td class="field">Annotated photos</td>
+  </tr>
+  <tr>
     <td class="fieldtitle">Francesco Ciattaglia</td>
     <td class="field">Italian translation</td>
   </tr>
