Patch#1372201: rotate may break when MIXED_THUMBNAILS = 1; thanks to Jason Taylor

--- a/php/credits.html
+++ b/php/credits.html
@@ -173,7 +173,7 @@
   </tr>
   <tr>
     <td class="fieldtitle">Jason Taylor</td>
-    <td class="field">Bugfix</td>
+    <td class="field">Various bugfixes</td>
   </tr>
   <tr>
     <td class="fieldtitle">Arjen Tebbenhof</td>
