Patch#1253265: SSL login, thanks to Sapphire.

--- a/php/credits.html
+++ b/php/credits.html
@@ -156,6 +156,10 @@
     <td class="field">CSS conversion and various changes</td>
   </tr>
   <tr>
+    <td class="fieldtitle">Sapphire</td>
+    <td class="field">SSL Login</td>
+  </tr>
+  <tr>
     <td class="fieldtitle">Oliver Seidel</td>
     <td class="field">Hierarchical directories in zophImport.pl</td>
   </tr>
