--- a/php/credits.html
+++ b/php/credits.html
@@ -140,6 +140,10 @@
     <td class="field">improvements</td>
   </tr>
   <tr>
+    <td class="fieldtitle">Aaron Parecki</td>
+    <td class="field">SSL Login</td>
+  </tr>
+  <tr>
     <td class="fieldtitle">Mario Peter</td>
     <td class="field">German translation</td>
   </tr>
@@ -154,10 +158,6 @@
   <tr>
     <td class="fieldtitle">Jeroen Roos</td>
     <td class="field">CSS conversion and various changes</td>
-  </tr>
-  <tr>
-    <td class="fieldtitle">Sapphire</td>
-    <td class="field">SSL Login</td>
   </tr>
   <tr>
     <td class="fieldtitle">Oliver Seidel</td>
