Req#685269 and Patch#1395052. Major improvements to the search page. Thanks to Roy Bonser.

--- a/php/credits.html
+++ b/php/credits.html
@@ -33,7 +33,7 @@
   </tr>
   <tr>
     <td class="fieldtitle">Roy Bonser</td>
-    <td class="field">Patches for web import function</td>
+    <td class="field">Patches for web import function and major improvements of seach page.</td>
   </tr>
   <tr>
     <td class="fieldtitle">Nixon Childs</td>
