Patch#1406959 Adding multiple people to a photo at once, thanks to Neil McBride - modifications by Jeroen Roos.

--- a/php/credits.html
+++ b/php/credits.html
@@ -124,6 +124,10 @@
     <td class="field">Swedish translation</td>
   </tr>
   <tr>
+    <td class="fieldtitle">Neil McBride</td>
+    <td class="field">Adding multiple people at once</td>
+  </tr>
+  <tr>
     <td class="fieldtitle">Jan Miczaika</td>
     <td class="field">importer, multiple ratings</td>
   </tr>
