Turkish translation added, thanks to Mufit Eribol

--- a/php/credits.html
+++ b/php/credits.html
@@ -60,6 +60,10 @@
     <td class="field">improvements</td>
   </tr>
   <tr>
+    <td class="fieldtitle">Mufit Eribol</td>
+    <td class="field">Turkish translation</td>
+  </tr>
+  <tr>
     <td class="fieldtitle">Donald Gover</td>
     <td class="field">bugfixes</td>
   </tr>
