Lots of cleanout of HTML and CSS code. Now all unnecessary tables have been replaced by semantic HTML/CSS combinations.

--- a/php/credits.html
+++ b/php/credits.html
@@ -16,183 +16,183 @@
 !-->
 <table id="credits">
   <tr>
-    <td class="fieldtitle">Joaquim Azevedo</td>
-    <td class="field">Portuguese translation</td>
+    <th>Joaquim Azevedo</th>
+    <td>Portuguese translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">David Baldwin</td>
-    <td class="field">PHP 4.2 compatibility and fixes</td>
+    <th>David Baldwin</th>
+    <td>PHP 4.2 compatibility and fixes</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Chris Beauchamp</td>
-    <td class="field">PostgresSQL diff</td>
+    <th>Chris Beauchamp</th>
+    <td>PostgresSQL diff</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Edelhard Becker</td>
-    <td class="field">Debian packages</td>
+    <th>Edelhard Becker</th>
+    <td>Debian packages</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Roy Bonser</td>
-    <td class="field">Patches for web import function and major improvements of seach page.</td>
+    <th>Roy Bonser</th>
+    <td>Patches for web import function and major improvements of seach page.</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Nixon Childs</td>
-    <td class="field">Annotated photos</td>
+    <th>Nixon Childs</th>
+    <td>Annotated photos</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Francesco Ciattaglia</td>
-    <td class="field">Italian translation</td>
+    <th>Francesco Ciattaglia</th>
+    <td>Italian translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Mark Cooper</td>
-    <td class="field">rpm packages, makefile, man page and fixes</td>
+    <th>Mark Cooper</th>
+    <td>rpm packages, makefile, man page and fixes</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Alvaro González Crespo</td>
-    <td class="field">Spanish translation</td>
+    <th>Alvaro González Crespo</th>
+    <td>Spanish translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Nils Decker</td>
-    <td class="field">zophEdit script</td>
+    <th>Nils Decker</th>
+    <td>zophEdit script</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Dominique Dumon</td>
-    <td class="field">improvements</td>
+    <th>Dominique Dumon</th>
+    <td>improvements</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Mufit Eribol</td>
-    <td class="field">Turkish translation</td>
+    <th>Mufit Eribol</th>
+    <td>Turkish translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Donald Gover</td>
-    <td class="field">bugfixes</td>
+    <th>Donald Gover</th>
+    <td>bugfixes</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Michael Hanke</td>
-    <td class="field">fixes</td>
+    <th>Michael Hanke</th>
+    <td>fixes</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Christian Hoenig</td>
-    <td class="field">improvements</td>
+    <th>Christian Hoenig</th>
+    <td>improvements</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Neels Jordaan</td>
-    <td class="field">Afrikaans translation</td>
+    <th>Neels Jordaan</th>
+    <td>Afrikaans translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Samuel Keim</td>
-    <td class="field">email notification, last login &amp; ip, PHP validation, improvements</td>
+    <th>Samuel Keim</th>
+    <td>email notification, last login &amp; ip, PHP validation, improvements</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Ian Kerr</td>
-    <td class="field">fixes, Canadian English translation</td>
+    <th>Ian Kerr</th>
+    <td>fixes, Canadian English translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Krzysztof Kajkowski</td>
-    <td class="field">Polish translation</td>
+    <th>Krzysztof Kajkowski</th>
+    <td>Polish translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">David Kulp</td>
-    <td class="field">bugfixes</td>
+    <th>David Kulp</th>
+    <td>bugfixes</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Tetsuji Kyan</td>
-    <td class="field">bugfixes</td>
+    <th>Tetsuji Kyan</th>
+    <td>bugfixes</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Patrick Lam</td>
-    <td class="field">Various improvements</td>
+    <th>Patrick Lam</th>
+    <td>Various improvements</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Asheesh Laroia</td>
-    <td class="field">htpasswd authentication, fixes</td>
+    <th>Asheesh Laroia</th>
+    <td>htpasswd authentication, fixes</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Johan Linder</td>
-    <td class="field">Updated Swedish translation</td>
+    <th>Johan Linder</th>
+    <td>Updated Swedish translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Mat Lee</td>
-    <td class="field">Traditional Chinese translation</td>
+    <th>Mat Lee</th>
+    <td>Traditional Chinese translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Haavard Leonardo Lund</td>
-    <td class="field">Norwegian translation</td>
+    <th>Haavard Leonardo Lund</th>
+    <td>Norwegian translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Matthew MacIntyre</td>
-    <td class="field">bugfixes</td>
+    <th>Matthew MacIntyre</th>
+    <td>bugfixes</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Mikael Magnusson</td>
-    <td class="field">Swedish translation</td>
+    <th>Mikael Magnusson</th>
+    <td>Swedish translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Neil McBride</td>
-    <td class="field">Adding multiple people at once</td>
+    <th>Neil McBride</th>
+    <td>Adding multiple people at once</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Jan Miczaika</td>
-    <td class="field">importer, multiple ratings</td>
+    <th>Jan Miczaika</th>
+    <td>importer, multiple ratings</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Francisco J. Montilla</td>
-    <td class="field">bugfixes and improvements</td>
+    <th>Francisco J. Montilla</th>
+    <td>bugfixes and improvements</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Giles Morant</td>
-    <td class="field">Movie import script<td>
+    <th>Giles Morant</th>
+    <td>Movie import script<td>
   </tr>
   <tr>
-    <td class="fieldtitle">David Moulton</td>
-    <td class="field">improvements</td>
+    <th>David Moulton</th>
+    <td>improvements</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Aaron Parecki</td>
-    <td class="field">SSL Login</td>
+    <th>Aaron Parecki</th>
+    <td>SSL Login</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Mario Peter</td>
-    <td class="field">German translation</td>
+    <th>Mario Peter</th>
+    <td>German translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">&quot;Prince01&quot;</td>
-    <td class="field">Hebrew translation</td>
+    <th>&quot;Prince01&quot;</th>
+    <td>Hebrew translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Curtis Rawls</td>
-    <td class="field">Bugfixes</td>
+    <th>Curtis Rawls</th>
+    <td>Bugfixes</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Jeroen Roos</td>
-    <td class="field">CSS conversion and various changes</td>
+    <th>Jeroen Roos</th>
+    <td>CSS conversion and various changes</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Oliver Seidel</td>
-    <td class="field">Hierarchical directories in zophImport.pl</td>
+    <th>Oliver Seidel</th>
+    <td>Hierarchical directories in zophImport.pl</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Eric Seigne</td>
-    <td class="field">internationalization, French translation</td>
+    <th>Eric Seigne</th>
+    <td>internationalization, French translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Jesper Skytte</td>
-    <td class="field">Danish Translation</td>
+    <th>Jesper Skytte</th>
+    <td>Danish Translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Alan Shutko</td>
-    <td class="field">improvements</td>
+    <th>Alan Shutko</th>
+    <td>improvements</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Jason Taylor</td>
-    <td class="field">Various bugfixes</td>
+    <th>Jason Taylor</th>
+    <td>Various bugfixes</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Arjen Tebbenhof</td>
-    <td class="field">Dutch translation</td>
+    <th>Arjen Tebbenhof</th>
+    <td>Dutch translation</td>
   </tr>
   <tr>
-    <td class="fieldtitle">Hans Verbrugge</td>
-    <td class="field">Bugfix</td>
+    <th>Hans Verbrugge</th>
+    <td>Bugfix</td>
   </tr>
 </table>
