Updated French translation, thanks to Antoine Delvaux

--- a/php/credits.html
+++ b/php/credits.html
@@ -56,6 +56,10 @@
     <td>zophEdit script</td>
   </tr>
   <tr>
+    <th>Antoine Delvaux</th>
+    <td>Updated French translation and zoph.org domain</td>
+  </tr>
+  <tr>
     <th>Dominique Dumon</th>
     <td>improvements</td>
   </tr>
