Patch#1713924: EXIF date/time priority, patch by Antoine Delvaux.

--- a/php/credits.html
+++ b/php/credits.html
@@ -57,7 +57,7 @@
   </tr>
   <tr>
     <th>Antoine Delvaux</th>
-    <td>Updated French translation and zoph.org domain</td>
+    <td>Updated French translation, EXIF patch and zoph.org domain</td>
   </tr>
   <tr>
     <th>Dominique Dumon</th>
