Credits for zophImport.pl patches

--- a/php/credits.html
+++ b/php/credits.html
@@ -68,6 +68,10 @@
     <td>Turkish translation</td>
   </tr>
   <tr>
+    <th>Peter Farr</th>
+    <td>zophImport.pl patches</td>
+  </tr>
+  <tr>
     <th>Donald Gover</th>
     <td>bugfixes</td>
   </tr>
