--- a/php/credits.html
+++ b/php/credits.html
@@ -84,6 +84,10 @@
     <td>improvements</td>
   </tr>
   <tr>
+    <th>Raimund Hook</th>
+    <td>Bugfix</td>
+  </tr>
+  <tr>
     <th>Neels Jordaan</th>
     <td>Afrikaans translation</td>
   </tr>
