Updating files for v0.7.0.4

--- a/php/credits.html
+++ b/php/credits.html
@@ -92,6 +92,10 @@
     <td>Afrikaans translation</td>
   </tr>
   <tr>
+    <th>Francisco Javier Félix</th>
+    <td>Updated Spanish translation, various bugfixes</td>
+  </tr> 
+  <tr>
     <th>Samuel Keim</th>
     <td>email notification, last login &amp; ip, PHP validation, improvements</td>
   </tr>
