--- a/php/credits.html
+++ b/php/credits.html
@@ -14,7 +14,7 @@
  * along with Zoph; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 !-->
-<table id="credits">
+<table class="credits">
   <tr>
     <th>Joaquim Azevedo</th>
     <td>Portuguese translation</td>
@@ -36,6 +36,10 @@
     <td>Patches for web import function and major improvements of seach page.</td>
   </tr>
   <tr>
+    <th>Charles Brunet</th>
+    <td>Various bugfixes</td>
+  </tr>
+  <tr>
     <th>Nixon Childs</th>
     <td>Annotated photos</td>
   </tr>
@@ -48,7 +52,7 @@
     <td>rpm packages, makefile, man page and fixes</td>
   </tr>
   <tr>
-    <th>Alvaro González Crespo</th>
+    <th>Alvaro Gonz&aacute;lez Crespo</th>
     <td>Spanish translation</td>
   </tr>
   <tr>
@@ -72,6 +76,10 @@
     <td>zophImport.pl patches</td>
   </tr>
   <tr>
+    <th><a href="http://www.geonames.org">Geonames project</a></th>
+    <td>Coordinates to timezone lookup</td>
+  </tr>
+  <tr>
     <th>Donald Gover</th>
     <td>bugfixes</td>
   </tr>
@@ -92,6 +100,10 @@
     <td>Afrikaans translation</td>
   </tr>
   <tr>
+    <th>Francisco Javier F&eacute;lix</th>
+    <td>Updated Spanish translation, various bugfixes</td>
+  </tr> 
+  <tr>
     <th>Samuel Keim</th>
     <td>email notification, last login &amp; ip, PHP validation, improvements</td>
   </tr>
@@ -103,6 +115,10 @@
     <th>Krzysztof Kajkowski</th>
     <td>Polish translation</td>
   </tr>
+   <tr>
+    <th>S&#322;awomir Kubiak</th>
+    <td>Updated Polish translation</td>
+  </tr> 
   <tr>
     <th>David Kulp</th>
     <td>bugfixes</td>
@@ -138,6 +154,10 @@
   <tr>
     <th>Mikael Magnusson</th>
     <td>Swedish translation</td>
+  </tr>
+  <tr>
+    <th><a href="http://www.mapstraction.com">Mapstraction project</a></th>
+    <td>Mapstraction mapping abstraction layer</td>
   </tr>
   <tr>
     <th>Neil McBride</th>
