Fix for a bug that would give an error (or not execute without an error, depending on the situation) when an album is added to a photo. Bug found and fixed by Pekka Kutinlati.

--- a/php/credits.html
+++ b/php/credits.html
@@ -124,6 +124,10 @@
     <td>bugfixes</td>
   </tr>
   <tr>
+    <th>Pekka Kutinlati</th>
+    <td>bugfix</td>
+  </tr>
+  <tr>
     <th>Tetsuji Kyan</th>
     <td>bugfixes</td>
   </tr>
