Added finnish translation by Pekka Kutinlahti

--- a/php/credits.html
+++ b/php/credits.html
@@ -125,7 +125,7 @@
   </tr>
   <tr>
     <th>Pekka Kutinlati</th>
-    <td>bugfix</td>
+    <td>Finnish Translation, bugfix</td>
   </tr>
   <tr>
     <th>Tetsuji Kyan</th>
