Russian translation by Sergey Chursin, Alexandr Bondarev

--- a/php/credits.html
+++ b/php/credits.html
@@ -32,6 +32,10 @@
     <td>Debian packages</td>
   </tr>
   <tr>
+    <th>Alexandr Bondarev</th>
+    <td>Russian translation</td>
+  </tr>
+  <tr>
     <th>Roy Bonser</th>
     <td>Patches for web import function and major improvements of seach page.</td>
   </tr>
@@ -210,6 +214,10 @@
   <tr>
     <th>Eric Seigne</th>
     <td>internationalization, French translation</td>
+  </tr>
+  <tr>
+    <th>Sergey Chursin</th>
+    <td>Russian translation</td>
   </tr>
   <tr>
     <th>Jesper Skytte</th>
