Added credits for bugfixes

--- a/php/credits.html
+++ b/php/credits.html
@@ -100,6 +100,10 @@
     <td>Bugfix</td>
   </tr>
   <tr>
+    <th>Jason (JiCit)</th>
+    <td>Bugfixes</td>
+  </tr>
+  <tr>
     <th>Neels Jordaan</th>
     <td>Afrikaans translation</td>
   </tr>
