First basic Leaflet implementation
Switching from Mapstraction to Leaflet. This is a basic PoC, based on
the work of @JiCiT.

In this version it's not yet possible to switch Mapping providers

Issue #68

--- a/php/credits.html
+++ b/php/credits.html
@@ -168,8 +168,8 @@
     <td>Swedish translation</td>
   </tr>
   <tr>
-    <th><a href="http://www.mapstraction.com">Mapstraction project</a></th>
-    <td>Mapstraction mapping abstraction layer</td>
+    <th><a href="http://leafletjs.com">Leaflet project</a></th>
+    <td>Leaflet mapping project</td>
   </tr>
   <tr>
     <th>Neil McBride</th>
