Re-adding GoogleMaps support
Issue #68

--- a/php/credits.html
+++ b/php/credits.html
@@ -172,6 +172,10 @@
     <td>Leaflet mapping project</td>
   </tr>
   <tr>
+    <th>Iv&aacute;n S&aacute;nchez Ortega</th>
+    <td>Leaflet Google Plugin</td>
+  </tr>
+  <tr>
     <th>Neil McBride</th>
     <td>Adding multiple people at once</td>
   </tr>
