Updated docs + version numbering for 0.9.6
Also added credits

--- a/php/credits.html
+++ b/php/credits.html
@@ -80,6 +80,10 @@
     <td>zophImport.pl patches</td>
   </tr>
   <tr>
+    <th>Pontus Fröding</th>
+    <td>Bugfixes</td>
+  </tr>
+  <tr>
     <th><a href="http://www.geonames.org">Geonames project</a></th>
     <td>Coordinates to timezone lookup</td>
   </tr>
